@@ -1,4 +1,5 @@
 X   X
+    * Add Axe + Respiration = generate tree
     * Add Hoe + Fire Protection = sensor
     * Change Boots + Punch = hover jump, now activated by double-tapping shift
     * Improve Shovel + Power = excavate, now can excavate sand
